# qt-study

./: README.md
qt-hello/: .gitignore  CMakeLists.txt  CMakePresets.json  janna_configuration.h.in
qt-hello/include/qt-hello/app/: mainwindow.h
qt-hello/include/qt-hello/util/: app_config.h  configuration.h  log_util.h
qt-hello/src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp
qt-hello/src/util/: CMakeLists.txt  app_config.cpp  log_util.cpp
qt-hello/test/: CMakeLists.txt  test_common.cpp  test_common.h  testmain.cpp
